# amaranth-vexriscv

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md  dev-requirements.txt  pyproject.toml  setup.py
amaranth_vexriscv/: __init__.py  vexriscv.py
amaranth_vexriscv/verilog/: .gitignore  Makefile  VexRiscv_LinuxMPW5.v  VexRiscv_LinuxMPW5.yaml  VexRiscv_LinuxMPW5L.v  VexRiscv_LinuxMPW5L.yaml  VexRiscv_LinuxMPWCache.v  VexRiscv_Lite.v  VexRiscv_LiteDebug.v
amaranth_vexriscv/verilog/src/main/scala/vexriscv/: GenCoreDefault.scala
