[tool.poetry]
name = "amaranth-vexriscv"
version = "0.0.0"
description = "Prebuilt VexRiscv (currently ASIC-optimised configs) and Amaranth Integration"
authors = ["Myrtle Shah <myrtle.shah@chipflow.io>"]
license = "MIT-Modern-Variant"
readme = "README.md"
packages = [{include = "amaranth_vexriscv"}]
include = ["*.v", "*.yaml"]

[tool.poetry.dependencies]
python = "^3.8"
amaranth = ">=0.5,<0.6"

[tool.poetry-dynamic-versioning]
enable = true
metadata = true
vcs = "git"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

